--- a/home.html
+++ b/home.html
@@ -28,8 +28,97 @@
   <h2 class="qoutes">Life is better with flowers.</h2>
   <a href="#Contact" class="button-link">Buy now!</a>
 </div>
-
 </div>
-
+<h1>Our best seller</h1>
+<div class="cards-container">
+   <div class="flowercard">
+<img src="pic/bluepeony.jpg" alt="Sunflower">     
+    <div class="p-4">
+      <h3 class="flower">Blue Peony</h3>
+      <p class="flowerp">Blue peony blooms where dreams reside</p>
+      <div class="price" >
+        <span>$37.99</span>
+        <a href="#Contact" class="addtocard">Add to Cart</a>
+      </div>
+    </div>
+  </div>
+  <div class="flowercard">
+<img src="pic/sunflower.jpg" alt="Sunflower">     
+    <div class="p-4">
+      <h3 class="flower">Sunflowers</h3>
+      <p class="flowerp">Cheerful sunflowers to bring joy to your day</p>
+      <div class="price">
+        <span>$34.99</span>
+        <a href="#Contact" class="addtocard">Add to Cart</a>
+      </div>
+    </div>
+  </div>
+  <div class="flowercard">
+    <img src="pic/pinkroses.jpg" alt="pink roses">
+    <div class="p-4">
+      <h3 class="flower">Pink Roses</h3>
+      <p class="flowerp">Elegant roses for someone special</p>
+      <div class="price">
+        <span>$29.99</span>
+        <a href="#Contact" class="addtocard">Add to Cart</a>
+      </div>
+    </div>
+  </div>
+  <div class="flowercard">
+    <img src="pic/tupils.jpg" alt="Tulips">
+    <div class="p-4">
+      <h3 class="flower">Spring Tulips</h3>
+      <p class="flowerp">Bright tulips to color your home</p>
+      <div class="price">
+        <span>$24.99</span>
+        <a href="#Contact" class="addtocard">Add to Cart</a>
+      </div>
+    </div>
+  </div>
+  <div class="flowercard">
+<img src="pic/Lily.jpg" alt="Sunflower">     
+    <div class="p-4">
+      <h3 class="flower">Lily</h3>
+      <p class="flowerp">A symbol of light in the shadows.</p>
+      <div class="price">
+        <span>$22.99</span>
+        <a href="#Contact" class="addtocard">Add to Cart</a>      </div>
+    </div>
+  </div>
+  <div class="flowercard">
+<img src="pic/redorchid.jpg" alt="Sunflower">     
+    <div class="p-4">
+      <h3 class="flower">Red Orchid</h3>
+      <p class="flowerp">Red orchid, passion in full bloom</p>
+      <div class="price">
+        <span>$40.99</span>
+        <a href="#Contact" class="addtocard">Add to Cart</a>
+      </div>
+    </div>
+  </div>
+  <div class="flowercard">
+<img src="pic/levender.jpg" alt="Sunflower">     
+    <div class="p-4">
+      <h3 class="flower">Levender</h3>
+      <p class="flowerp">A touch of purple, a world of peace</p>
+      <div class="price">
+        <span>$30.99</span>
+        <a href="#Contact" class="addtocard">Add to Cart</a>
+      </div>
+    </div>
+  </div>
+  <div class="flowercard">
+<img src="pic/hydrangea.jpg" alt="Sunflower">     
+    <div class="p-4">
+      <h3 class="flower">Hydrangea</h3>
+      <p class="flowerp">Beauty in every shade</p>
+      <div class="price">
+        <span>$34.99</span>
+          <a href="#Contact" class="addtocard">Add to Cart</a>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
+
