--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
 <h1>Our best seller</h1>
 <div class="cards-container">
    <div class="flowercard">
-<img src="pic/bluepeony.jpg" alt="Sunflower">     
+<img src="pic/bluepeony.jpg" alt="Bluepeony">     
     <div class="p-4">
       <h3 class="flower">Blue Peony</h3>
       <p class="flowerp">Blue peony blooms where dreams reside</p>
@@ -76,7 +76,7 @@
     </div>
   </div>
   <div class="flowercard">
-<img src="pic/Lily.jpg" alt="Sunflower">     
+<img src="pic/Lily.jpg" alt="lily">     
     <div class="p-4">
       <h3 class="flower">Lily</h3>
       <p class="flowerp">A symbol of light in the shadows.</p>
@@ -86,7 +86,7 @@
     </div>
   </div>
   <div class="flowercard">
-<img src="pic/redorchid.jpg" alt="Sunflower">     
+<img src="pic/redorchid.jpg" alt="redorchid">     
     <div class="p-4">
       <h3 class="flower">Red Orchid</h3>
       <p class="flowerp">Red orchid, passion in full bloom</p>
@@ -97,7 +97,7 @@
     </div>
   </div>
   <div class="flowercard">
-<img src="pic/levender.jpg" alt="Sunflower">     
+<img src="pic/levender.jpg" alt="levender">     
     <div class="p-4">
       <h3 class="flower">Levender</h3>
       <p class="flowerp">A touch of purple, a world of peace</p>
@@ -108,7 +108,7 @@
     </div>
   </div>
   <div class="flowercard">
-<img src="pic/hydrangea.jpg" alt="Sunflower">     
+<img src="pic/hydrangea.jpg" alt="hydrangea">     
     <div class="p-4">
       <h3 class="flower">Hydrangea</h3>
       <p class="flowerp">Beauty in every shade</p>
@@ -121,4 +121,5 @@
 </div>
 </body>
 </html>
+
 
