--- a/home.html
+++ b/home.html
@@ -3,57 +3,64 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flower shop</title>
+  <title>Flower Shop</title>
   <link rel="stylesheet" href="projekti.css">
 </head>
+
 <body>
-  <div class="navbar">
+
+  <header class="navbar">
     <a href="#home">Home</a>
-     <a href="#AboutUs">About Us</a>
+    <a href="#AboutUs">About Us</a>
     <a href="#bouquets">Bouquets</a>
     <a href="#Contact">Contact</a>
-    
+  </header>
+
+  <div id="search-bar">
+    <img src="pic/bloom.png" alt="logo">
+    <form id="search" action="#bouquets">
+      <input id="inputsearch" type="text" placeholder="Search for flowers">
+      <input id="searchbtn" type="submit" value="SEARCH">
+    </form>
   </div>
-     <div id="search-bar">
-        <img src="pic/bloom.png" alt="logo">
-         <form id="search" action="/search">
-         <input id="inputsearch" type="text" placeholder="Search for flowers">
-         <input id="searchbtn" type="submit" value="SEARCH">
-       </form>
-      </div>
-      
-<div class="container">
-  <img class="background" src="pic/Love.jpg" alt="Foto me lule background">
- <div class="text-button">
-  <h2 class="qoutes">Life is better with flowers.</h2>
-  <a href="#Contact" class="button-link">Buy now!</a>
-</div>
-</div>
-<h1>Our best seller</h1>
-<div class="cards-container">
-   <div class="flowercard">
-<img src="pic/bluepeony.jpg" alt="Bluepeony">     
-    <div class="p-4">
-      <h3 class="flower">Blue Peony</h3>
-      <p class="flowerp">Blue peony blooms where dreams reside</p>
-      <div class="price" >
-        <span>$37.99</span>
-        <a href="#Contact" class="addtocard">Add to Cart</a>
+  <section class="container">
+    <img class="background" src="pic/background (2).jpg" alt="Foto me lule background">
+    <div class="text-button">
+      <h2 class="qoutes">Life is better with flowers.</h2>
+      <a href="#Contact" class="button-link">Buy now!</a>
+    </div>
+  </section>
+
+        <h1 class="title">Our Best Sellers</h1>
+
+  <div class="cards-container">
+
+    <div class="flowercard">
+      <img src="pic/bluepeony.jpg" alt="Blue Peony">
+      <div class="p-4">
+        <span class="badge">Best Seller</span>
+        <h3 class="flower">Blue Peony</h3>
+        <p class="flowerp">Blue peony blooms where dreams reside</p>
+        <div class="price">
+          <span>$37.99</span>
+          <a href="#Contact" class="addtocard">Add to Cart</a>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="flowercard">
-<img src="pic/sunflower.jpg" alt="Sunflower">     
-    <div class="p-4">
-      <h3 class="flower">Sunflowers</h3>
-      <p class="flowerp">Cheerful sunflowers to bring joy to your day</p>
-      <div class="price">
-        <span>$34.99</span>
-        <a href="#Contact" class="addtocard">Add to Cart</a>
+
+    <div class="flowercard">
+      <img src="pic/sunflower.jpg" alt="Sunflower">
+      <div class="p-4">
+        <h3 class="flower">Sunflowers</h3>
+        <p class="flowerp">Cheerful sunflowers to bring joy to your day</p>
+        <div class="price">
+          <span>$34.99</span>
+          <a href="#Contact" class="addtocard">Add to Cart</a>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="flowercard">
+
+     <div class="flowercard">
     <img src="pic/pinkroses.jpg" alt="pink roses">
     <div class="p-4">
       <h3 class="flower">Pink Roses</h3>
@@ -67,6 +74,7 @@
   <div class="flowercard">
     <img src="pic/tupils.jpg" alt="Tulips">
     <div class="p-4">
+      <span class="badge">Best Seller</span>
       <h3 class="flower">Spring Tulips</h3>
       <p class="flowerp">Bright tulips to color your home</p>
       <div class="price">
@@ -75,8 +83,9 @@
       </div>
     </div>
   </div>
-  <div class="flowercard">
-<img src="pic/Lily.jpg" alt="lily">     
+
+     <div class="flowercard">
+<img src="pic/Lily.jpg" alt="Sunflower">     
     <div class="p-4">
       <h3 class="flower">Lily</h3>
       <p class="flowerp">A symbol of light in the shadows.</p>
@@ -86,7 +95,7 @@
     </div>
   </div>
   <div class="flowercard">
-<img src="pic/redorchid.jpg" alt="redorchid">     
+<img src="pic/redorchid.jpg" alt="Sunflower">     
     <div class="p-4">
       <h3 class="flower">Red Orchid</h3>
       <p class="flowerp">Red orchid, passion in full bloom</p>
@@ -97,18 +106,20 @@
     </div>
   </div>
   <div class="flowercard">
-<img src="pic/levender.jpg" alt="levender">     
+<img src="pic/levender.jpg" alt="Sunflower">     
     <div class="p-4">
+      <span class="badge1">Sale</span>
       <h3 class="flower">Levender</h3>
       <p class="flowerp">A touch of purple, a world of peace</p>
       <div class="price">
-        <span>$30.99</span>
+      <span class="old-price">$37.99</span>
+      <span class="new-price">$29.99</span>
         <a href="#Contact" class="addtocard">Add to Cart</a>
       </div>
     </div>
   </div>
   <div class="flowercard">
-<img src="pic/hydrangea.jpg" alt="hydrangea">     
+<img src="pic/hydrangea.jpg" alt="Sunflower">     
     <div class="p-4">
       <h3 class="flower">Hydrangea</h3>
       <p class="flowerp">Beauty in every shade</p>
@@ -118,8 +129,68 @@
       </div>
     </div>
   </div>
-</div>
+  </div>
+   <section id="AboutUs" class="about-section">
+  <h2>About Us</h2>
+  <p>
+    At Flower Shop, we believe that flowers make life brighter and moments unforgettable.<br>
+    Our passion is to create beautiful bouquets for every occasion, with love and care.
+  </p>
+  <div class="slideshow-container">
+    <img class="slide" src="pic/shop3.jpg" alt="Shop Image 1">
+    <img class="slide" src="pic/shop2.jpg" alt="Shop Image 2">
+    <img class="slide" src="pic/shop1.jpg" alt="Shop Image 3">
+  </div>
+</section>
+<section id="Reviews" class="reviews-section">
+  <h2>What Our Customers Say</h2>
+  <div class="reviews-container">
+    <div class="review-card">
+      <p>"Beautiful flowers, arrived fresh and on time! Highly recommend."</p>
+      <span>- Sarah L.</span>
+    </div>
+    <div class="review-card">
+      <p>"Amazing service and stunning arrangements, my guests loved them."</p>
+      <span>- John D.</span>
+    </div>
+    <div class="review-card">
+      <p>"Lovely experience, will definitely order again."</p>
+      <span>- Emma W.</span>
+    </div>
+  </div>
+</section>
+<section id="Contact" class="contact-section">
+  <h2>Contact Us</h2>
+  <p>Have questions or want to place a custom order? Reach out to us!</p>
+  <form class="contact-form">
+    <input type="text" placeholder="Your Name" required>
+    <input type="email" placeholder="Your Email" required>
+    <textarea placeholder="Your Message" required></textarea>
+    <button type="submit">Send Message</button>
+  </form>
+</section>
+<footer class="footer">
+  <div class="footer-content">
+    <div class="footer-column">
+      <h3>About Us</h3>
+      <p>We bring the beauty of nature to you with flowers and special arrangements.</p>
+    </div>
+    <div class="footer-column footer-links">
+      <h3>Quick Links</h3>
+      <a href="#AboutUs">About Us</a>
+      <a href="#BestSellers">Best Sellers</a>
+      <a href="#Contact">Contact</a>
+    </div>
+    <div class="footer-column footer-social">
+      <h3>Follow Us</h3>
+      <a href="#"><i class="fab fa-facebook-f"></i> Facebook</a>
+      <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+      <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    &copy; 2025 Flower Shop. All Rights Reserved.
+  </div>
+</footer>
 </body>
 </html>
-
-
