--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="contact.css">
 </head>
 <body class="contactus-container">
-
-    <!-- Navbar -->
     <header class="navbar">
         <div class="nav-links">
             <a href="home.html">Home</a>
@@ -18,25 +16,35 @@
         </div>
         <a href="createaccount.html" class="sign-in-btn">Create Account</a>
     </header>
-
-    <!-- Contact Card -->
     <div class="contactus">
         <div class="contacts">
             <p>Contact Us Here:</p>
             <p>(+383) 44 111 222</p>
             <p>St. Agrim Ramadani, Prishtina Kosovo</p>
-            <ul>
-                <li class="social"><a href="https://www.instagram.com"><img src="images/instagram.png" alt="Instagram"></a></li>
-                <li class="social"><a href="https://www.facebook.com"><img src="images/facebook.png" alt="Facebook"></a></li>
-                <li class="social"><a href="https://www.twitter.com"><img src="images/twitter.png" alt="Twitter"></a></li>
-                <li class="social"><a href="https://www.gmail.com"><img src="images/gmail.png" alt="Gmail"></a></li>
+
+            <ul class="social-list">
+                <li>
+                    <a href="https://www.instagram.com">
+                        <img src="pic/instalogo.jpg" alt="Instagram">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com">
+                        <img src="pic/facebooklogo.png" alt="Facebook">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com">
+                        <img src="pic/twitterlogo.png" alt="Twitter">
+                    </a>
+                </li>
             </ul>
         </div>  
 
         <div class="contact-form">
             <p class="help">Need any help? Feel free to ask!</p>
             <input class="contactus-input" type="text" placeholder="Your message">
-            <input class="contactus-input" type="submit" value="Send">
+            <input class="contactus-input submit" type="submit" value="Send">
         </div>
     </div>
 
