--- a/home.html
+++ b/home.html
@@ -131,10 +131,10 @@
   </div>
   </div>
    <section id="AboutUs" class="about-section">
-  <h2>About Us</h2>
+  <h2>Our boutique</h2>
   <p>
-    At Flower Shop, we believe that flowers make life brighter and moments unforgettable.<br>
-    Our passion is to create beautiful bouquets for every occasion, with love and care.
+   A cozy floral space where every bouquet is crafted with care, fresh blooms, and a touch of elegance.
+   <br> Discover flowers designed to brighten every moment.
   </p>
   <div class="slideshow-container">
     <img class="slide" src="pic/shop3.jpg" alt="Shop Image 1">
@@ -194,3 +194,4 @@
 </footer>
 </body>
 </html>
+
