--- a/home.html
+++ b/home.html
@@ -4,21 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flower Shop</title>
-  <link rel="stylesheet" href="projekti.css">
+  <link rel="stylesheet" href="home.css">
+  
 </head>
 
 <body>
 
-  <header class="navbar">
-    <a href="#home">Home</a>
-    <a href="#AboutUs">About Us</a>
-    <a href="#bouquets">Bouquets</a>
-    <a href="#Contact">Contact</a>
-  </header>
+<header class="navbar">
+  <div class="nav-links">
+    <a href="home.html">Home</a>
+    <a href="aboutus.html">About Us</a>
+    <a href="bouquets.html">Bouquets</a>
+    <a href="contact.html">Contact</a>
+  </div>
+  <a href="createaccount.html" class="sign-in-btn">Create Account</a>
+</header>
 
   <div id="search-bar">
     <img src="pic/bloom.png" alt="logo">
-    <form id="search" action="#bouquets">
+    <form id="search" action="bouquets.html">
       <input id="inputsearch" type="text" placeholder="Search for flowers">
       <input id="searchbtn" type="submit" value="SEARCH">
     </form>
@@ -27,7 +31,7 @@
     <img class="background" src="pic/background (2).jpg" alt="Foto me lule background">
     <div class="text-button">
       <h2 class="qoutes">Life is better with flowers.</h2>
-      <a href="#Contact" class="button-link">Buy now!</a>
+      <a href="contact.html" class="button-link">Buy now!</a>
     </div>
   </section>
 
@@ -43,7 +47,7 @@
         <p class="flowerp">Blue peony blooms where dreams reside</p>
         <div class="price">
           <span>$37.99</span>
-          <a href="#Contact" class="addtocard">Add to Cart</a>
+          <a href="contact.html" class="addtocard">Add to Cart</a>
         </div>
       </div>
     </div>
@@ -55,7 +59,7 @@
         <p class="flowerp">Cheerful sunflowers to bring joy to your day</p>
         <div class="price">
           <span>$34.99</span>
-          <a href="#Contact" class="addtocard">Add to Cart</a>
+          <a href="contact.html" class="addtocard">Add to Cart</a>
         </div>
       </div>
     </div>
@@ -67,7 +71,7 @@
       <p class="flowerp">Elegant roses for someone special</p>
       <div class="price">
         <span>$29.99</span>
-        <a href="#Contact" class="addtocard">Add to Cart</a>
+        <a href="contact.html" class="addtocard">Add to Cart</a>
       </div>
     </div>
   </div>
@@ -79,7 +83,7 @@
       <p class="flowerp">Bright tulips to color your home</p>
       <div class="price">
         <span>$24.99</span>
-        <a href="#Contact" class="addtocard">Add to Cart</a>
+        <a href="contact.html" class="addtocard">Add to Cart</a>
       </div>
     </div>
   </div>
@@ -91,7 +95,7 @@
       <p class="flowerp">A symbol of light in the shadows.</p>
       <div class="price">
         <span>$22.99</span>
-        <a href="#Contact" class="addtocard">Add to Cart</a>      </div>
+        <a href="contact.html" class="addtocard">Add to Cart</a>      </div>
     </div>
   </div>
   <div class="flowercard">
@@ -101,7 +105,7 @@
       <p class="flowerp">Red orchid, passion in full bloom</p>
       <div class="price">
         <span>$40.99</span>
-        <a href="#Contact" class="addtocard">Add to Cart</a>
+        <a href="contact.html" class="addtocard">Add to Cart</a>
       </div>
     </div>
   </div>
@@ -114,7 +118,7 @@
       <div class="price">
       <span class="old-price">$37.99</span>
       <span class="new-price">$29.99</span>
-        <a href="#Contact" class="addtocard">Add to Cart</a>
+        <a href="contact.html" class="addtocard">Add to Cart</a>
       </div>
     </div>
   </div>
@@ -125,7 +129,7 @@
       <p class="flowerp">Beauty in every shade</p>
       <div class="price">
         <span>$34.99</span>
-          <a href="#Contact" class="addtocard">Add to Cart</a>
+          <a href="contact.html" class="addtocard">Add to Cart</a>
       </div>
     </div>
   </div>
@@ -146,14 +150,17 @@
   <h2>What Our Customers Say</h2>
   <div class="reviews-container">
     <div class="review-card">
+       <div class="stars" style="--rating: 100%;"></div>
       <p>"Beautiful flowers, arrived fresh and on time! Highly recommend."</p>
       <span>- Sarah L.</span>
     </div>
     <div class="review-card">
+       <div class="stars" style="--rating: 100%;"></div>
       <p>"Amazing service and stunning arrangements, my guests loved them."</p>
       <span>- John D.</span>
     </div>
     <div class="review-card">
+       <div class="stars" style="--rating: 95%;"></div>
       <p>"Lovely experience, will definitely order again."</p>
       <span>- Emma W.</span>
     </div>
@@ -177,9 +184,9 @@
     </div>
     <div class="footer-column footer-links">
       <h3>Quick Links</h3>
-      <a href="#AboutUs">About Us</a>
-      <a href="#BestSellers">Best Sellers</a>
-      <a href="#Contact">Contact</a>
+      <a href="aboutus.html">About Us</a>
+      <a href="bouquets.html">Best Sellers</a>
+      <a href="contact.html">Contact</a>
     </div>
     <div class="footer-column footer-social">
       <h3>Follow Us</h3>
@@ -194,4 +201,3 @@
 </footer>
 </body>
 </html>
-
