--- a/aboutus.html
+++ b/aboutus.html
@@ -4,40 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us - Flower Shop</title>
-    <link rel="stylesheet" href="aboutus.css" />
+    <link rel="stylesheet" href="../css/aboutus.css" />
 </head>
 <body>
     <header class="navbar">
         <div class="nav-links">
-            <a href="home.html">Home</a>
+            <a href="home.html" >Home</a>
             <a href="aboutus.html" class="active">About Us</a>
             <a href="bouquets.html">Bouquets</a>
             <a href="contact.html">Contact</a>
         </div>
         <a href="createaccount.html" class="sign-in-btn">Create Account</a>
     </header>
-   <section class="about-section">
-    <div class="about-container">
-        <div class="about-text">
-            <h2>About Us</h2>
-            <p>
-                Welcome to <strong>Flower Shop</strong> — your destination for elegant, fresh,
-                and beautifully arranged flowers. We are passionate about creating designs
-                that turn emotions into stunning floral expressions.
-            </p>
-            <p>
-                Our team works every day to bring joy, color, and life to your special
-                moments — weddings, birthdays, anniversaries, or any important day.
-            </p>
-            <p>
-                With years of experience and a love for creativity, we make sure every
-                bouquet is crafted with care, precision, and heart.
-            </p>
-        </div>
-        <div class="about-image">
-            <img src="pic/FlowerBar.jpg" alt="Flowers">
+<section class="about-section">
+  <div class="about-container">
+    <div class="about-text">
+        <h2>About Us</h2>
+        <p>
+            Welcome to <strong>Flower Shop</strong> — where every bloom tells a story, 
+            and every bouquet is a celebration of life, love, and special moments.
+        </p>
+        <p> Founded in 2015, our passion has always been simple: to bring joy, color, and life 
+            into every home and every celebration. Each arrangement is crafted with care, 
+            creativity, and heart.
+        </p>
+        <p>
+            From weddings to birthdays, anniversaries, or simply a surprise for someone special, 
+            we craft each bouquet with heart, precision, and dedication.
+        </p>
+        <div class="cta-buttons">
+            <a class="btn" href="bouquets.html">Explore Our Best Sellers</a>
         </div>
     </div>
+    <figure class="about-image">
+        <img src="../pic/bloom.jpg" alt="Flowers">
+        <figcaption >Flower shop</figcaption>
+    </figure>
+  </div>
+</section>
+
+<section class="boutique">
+    <img src="../pic/bloom1.jpg" alt="flowershop">
+    <img src="../pic/bloom2.jpg" alt="flowershop">
+    <img src="../pic/bloom3.jpg" alt="flowershop">
 </section>
 <section class="mission-section">
     <div class="grid-2">
@@ -47,11 +56,11 @@
         </div>
         <div class="box">
             <h3>How We Work</h3>
-            <ul>
+            <ol>
                 <li>Clear pricing and open communication</li>
                 <li>User-focused approach and real testing</li>
                 <li>On-time delivery and reliable support</li>
-            </ul>
+            </ol>
         </div>
     </div>
 </section>    
